--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 31 // 28
 
     defaultConfig {
-        applicationId "com.zp.zfile_manager"
+        applicationId "com.zj.file_manager"
         minSdkVersion 24
         targetSdkVersion 31 // 28
         versionCode 1
