--- a/file/src/main/AndroidManifest.xml
+++ b/file/src/main/AndroidManifest.xml
@@ -5,14 +5,17 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage"/>
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application>
-        <activity android:name=".ui.ZFileQWActivity"
-            android:theme="@style/ZFile_BaseTheme"/>
+        <activity
+            android:name=".ui.ZFileQWActivity"
+            android:theme="@style/ZFile_BaseTheme" />
         <activity
             android:name=".ui.ZFileListActivity"
+            android:configChanges="keyboardHidden|keyboard|screenSize|locale|navigation|smallestScreenSize|screenLayout|orientation"
             android:theme="@style/ZFile_BaseTheme" />
         <activity
             android:name=".ui.ZFilePicActivity"
