--- a/file/build.gradle
+++ b/file/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 31 // 29  30
 
@@ -10,11 +11,13 @@ android {
         versionCode 1
         versionName "1.0"
 
-        consumerProguardFiles 'consumer-rules.pro'
+        // 去除多语言
+        resConfigs "zh", "zh-rCN", "zh-rHK", "zh-rTW"
     }
 
     buildTypes {
         release {
+            // 开启混淆
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
