切换深色模式不重启activity

--- a/file/src/main/AndroidManifest.xml
+++ b/file/src/main/AndroidManifest.xml
@@ -12,16 +12,19 @@
     <application>
         <activity
             android:name=".ui.ZFileQWActivity"
+            android:configChanges="locale|smallestScreenSize|screenLayout|orientation|uiMode"
             android:theme="@style/ZFile_BaseTheme" />
         <activity
             android:name=".ui.ZFileListActivity"
-            android:configChanges="keyboardHidden|keyboard|screenSize|locale|navigation|smallestScreenSize|screenLayout|orientation"
+            android:configChanges="locale|smallestScreenSize|screenLayout|orientation|uiMode"
             android:theme="@style/ZFile_BaseTheme" />
         <activity
             android:name=".ui.ZFilePicActivity"
+            android:configChanges="locale|smallestScreenSize|screenLayout|orientation|uiMode"
             android:theme="@style/ZFile_BaseTheme" />
         <activity
             android:name=".ui.ZFileVideoPlayActivity"
+            android:configChanges="locale|smallestScreenSize|screenLayout|orientation|uiMode"
             android:theme="@style/ZFile_BaseTheme" />
     </application>
 
