--- a/file/src/main/AndroidManifest.xml
+++ b/file/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
 
     <application>
         <activity
+            android:name=".ui.SearchActivity"
+            android:configChanges="locale|smallestScreenSize|screenLayout|orientation|uiMode"
+            android:theme="@style/ZFile_BaseTheme" />
+        <activity
             android:name=".ui.ZFileQWActivity"
             android:configChanges="locale|smallestScreenSize|screenLayout|orientation|uiMode"
             android:theme="@style/ZFile_BaseTheme" />
