--- a/file/build.gradle
+++ b/file/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.android.material:material:1.4.0'
+    def activity_version = "1.4.0"
+    implementation "androidx.activity:activity-ktx:$activity_version"
+    def fragment_version = "1.3.6"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 }
