--- a/file/build.gradle
+++ b/file/build.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+}
 
 android {
     compileSdkVersion 31 // 29  30
@@ -8,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 31  // 29 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.2.3"
 
         // 去除多语言
         resConfigs "zh", "zh-rCN", "zh-rHK", "zh-rTW"
@@ -23,9 +25,8 @@ android {
         }
     }
 
-    // Kotlin Parcelable 支持
-    androidExtensions {
-        experimental = true
+    buildFeatures {
+        viewBinding true
     }
 
     compileOptions {
