--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,24 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31 // 28
+
+    signingConfigs {
+        fileManager {
+            storeFile file(sign.file)
+            storePassword sign.storePassword
+            keyAlias sign.keyAlias
+            keyPassword sign.keyPassword
+        }
+    }
+
+    compileSdkVersion cfgs.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.zj.file_manager"
-        minSdkVersion 24
-        targetSdkVersion 31 // 28
-        versionCode 5
-        versionName "1.2.3"
+        applicationId "com.zj.manager"
+        minSdkVersion cfgs.minSdkVersion
+        targetSdkVersion cfgs.targetSdkVersion
+        versionCode cfgs.versionCode
+        versionName cfgs.versionName
         // 去除多语言
         resConfigs "zh", "zh-rCN", "zh-rHK", "zh-rTW"
     }
@@ -34,11 +44,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation des.kotlinVersion
+    implementation des.coreKtx
+    implementation des.appcompat
+    implementation des.material
+    implementation des.activity_ktx
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
