--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </provider>
 
         <activity
-            android:name=".fm.FragmentSampleActivity2"
+            android:name=".fm.FragmentSampleActivity"
             android:theme="@style/ZFile_BaseTheme" />
         <activity
             android:name=".diy.SunActivity"
