--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.caverock:androidsvg-aar:1.4'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.documentfile:documentfile:1.0.1'
     implementation project(':file')
