--- a/file/build.gradle
+++ b/file/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     implementation 'com.airbnb.android:lottie:4.2.2'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    api 'com.tencent.tbs:tbssdk:44136'
 }
