--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     }
 
     buildFeatures {
+        compose true
         viewBinding true
     }
 
@@ -55,6 +56,14 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.caverock:androidsvg-aar:1.4'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
     implementation 'androidx.documentfile:documentfile:1.0.1'
     implementation project(':file')
 }
