--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@
 apply from: "config.gradle"
 
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext {
+        compose_version = '1.1.0-rc01'
+        kotlin_version = '1.6.0'
+        hilt_version = '2.40.5'
+    }
     repositories {
         google()
         mavenCentral()
@@ -11,7 +15,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
